--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -58,6 +58,10 @@ section{
     font-size: 3.5vw;
 }
 
+section p{
+    padding-bottom: 2em;
+}
+
 section.normal{
     background-color: white;
 }
@@ -65,16 +69,31 @@ section.normal{
 section.imagem{
     background-color: rgb(44, 43, 43);
     color: white;
+    box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.637);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.192);
+    background-color: rgba(0, 0, 0, 0.486);
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.411);
+}
+
+section#img01{
+    background-image: url('../d012/imagens/background001.jpg');
+    background-position: right center;
+    
+}
+
+section#img02{
+    background-image: url('../d012/imagens/background002.jpg');
+   
 }
 
 footer{
-    background-color: rgba(0, 0, 0, 0.233);
+    background-color: black;
     color: white;
     text-align: center;
     padding: 10px;
